# CANpie

./: .cproject  .gitattributes  .gitconfig  .gitignore  .gitmodules  .project  CHANGELOG.md  CMakeLists.txt  README.md  astyle.bat  clean_version.sh  config.sh  get_version.sh
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  SECURITY_ADVISORY_TEMPLATE.md
cmake/: AddCompilerFlags.cmake  AddSourceDirectories.cmake  AddSplint.cmake  CpDirectories.cmake
code-style/: README.md
docs/: .gitignore  can_abbreviations.html  can_introduction.html  canpie_8h.html  canpie_api.html  canpie_api_bit_timing.html  (+84 more)
source/application/: .gitignore  CMakeLists.txt  applications.pro
source/application/can-config/: CMakeLists.txt  can-config.pro  qcan_config.cpp  qcan_config.hpp
source/application/can-dump/: CMakeLists.txt  can-dump.pro  qcan_dump.cpp  qcan_dump.hpp
source/application/can-error/: .gitignore  CMakeLists.txt  can-error.pro  qcan_error.cpp  qcan_error.hpp
source/application/can-send/: .gitignore  CMakeLists.txt  can-send.pro  qcan_send.cpp  qcan_send.hpp
source/application/examples-canpie-fd/: demo_buffer_config.c  demo_buffer_fifo.c
source/application/monitor/: .gitignore  monitor_main.cpp
source/application/plugins/: CMakeLists.txt  plugins.pro
source/application/plugins/qcan-hms-vci3/: qcan_interface_ixxat.cpp  qcan_ixxat_vci.cpp  qcan_plugin_ixxat.cpp
source/application/plugins/qcan-hms-vci3/include/: LINtype.h  vcinpl.h
source/application/plugins/qcan-hms-vci4/: CMakeLists.txt  qcan_interface_vci4.cpp  qcan_interface_vci4.hpp  qcan_plugin_vci4.cpp  qcan_plugin_vci4.hpp  qcan_vci4.qrc  uuids.c
source/application/plugins/qcan-hms-vci4/include/: VCI4112guid.h  VCI4113guid.h  cantype.h  stdtype.h  vci4002guid.h  vci4005guid.h  vci4105guid.h  vci4109guid.h  vci410Aguid.h  vci410Cguid.h  vci4111guid.h  vci4114guid.h  vci4115guid.h  vci4116guid.h  vci4117guid.h  vci4118guid.h  vci4120guid.h  vci4503guid.h  vci4frcguid.h  vcierr.h  vcifsl.h  vcinpl2.h  vcitype.h  vciver.h
source/application/plugins/qcan-hms-vci4/lib/x32/: vcinpl.lib  vcinpl2.lib
source/application/plugins/qcan-hms-vci4/lib/x32/Release/: vciapi.lib  vcifsl.lib
source/application/plugins/qcan-hms-vci4/lib/x64/: vcinpl.lib  vcinpl2.lib
source/application/plugins/qcan-hms-vci4/lib/x64/Release/: vciapi.lib  vcifsl.lib
source/application/plugins/qcan-ixxat/: qcan_ixxat.pro
source/application/plugins/qcan-ixxat/include/: vcierr.h
source/application/plugins/qcan-peak/: .gitignore  CMakeLists.txt  README.md  qcan-peak.pro  qcan_interface_peak.cpp  qcan_interface_peak.hpp  qcan_pcan_basic.cpp  qcan_pcan_basic.hpp  qcan_peak.pro  qcan_plugin_peak.cpp  qcan_plugin_peak.hpp
source/application/plugins/qcan-peak/include/: README.md
source/application/plugins/qcan-peak/include/macos/: PCBUSB.h
source/application/plugins/qcan-peak/lib/macos/: README.md  libPCBUSB.0.11.2.dylib  libPCBUSB.dylib
source/application/plugins/qcan-peak/libs/osx/: README.md
source/application/plugins/qcan-template/: CMakeLists.txt  qcan-template.pro  qcan_interface_template.cpp  qcan_interface_template.hpp  qcan_plugin_template.cpp  qcan_plugin_template.hpp
source/application/plugins/qcan-usart/: CMakeLists.txt  cp_usart.c  mc_usart.h  qcan-usart.pro  qcan_interface_usart.cpp  qcan_interface_usart.hpp  qcan_main.cpp  qcan_plugin_usart.cpp  qcan_plugin_usart.hpp  qcan_usart.cpp  qcan_usart.hpp
source/application/plugins/qcan-usart-cpm/: .gitignore  CMakeLists.txt  cp_platform.h  plugin.json  qcan-usart-cpm.pro  qcan_interface_usart.cpp  qcan_interface_usart.hpp  qcan_main.cpp  qcan_plugin_usart.cpp  qcan_plugin_usart.hpp  qcan_usart.cpp  qcan_usart.hpp
source/application/plugins/qcan-usart-cpm/forms/: qcan_config.cpp  qcan_config.hpp  qcan_config.ui
source/application/plugins/qcan-usart/forms/: qcan_config.cpp  qcan_config.hpp
source/application/plugins/qcan_ixxat/: qcan_ixxat_vci.hpp
source/application/plugins/qcan_ixxat/include/: vcitype.h  vciver.h
source/application/plugins/qcan_peak/: plugin.json  qcan_interface_peak.cpp
source/application/plugins/qcan_peak/include/: PCBUSB.h
source/application/plugins/qcan_template/: .gitignore  CMakeLists.txt  README.md  qcan_interface_template.cpp  qcan_interface_template.hpp
source/application/plugins/qcan_usart/: qcan_gui.hpp  qcan_interface_usart.cpp  qcan_plugin_usart.hpp  qcan_usart.cpp  qcan_usart.hpp  qcan_usart.pro  qcan_usart.qrc
source/application/plugins/qcan_usart/forms/: qcan_config.ui
source/application/server/: .gitignore  CMakeLists.txt  Info.plist  mk-icon.sh  qcan_interface_widget.cpp  qcan_interface_widget.hpp  qcan_server_dialog.cpp  qcan_server_dialog.hpp  server.pro  server.qrc  server_main.cpp
source/application/server/forms/: ServerConfig.ui
source/application/server/images/: mk-icon.sh
source/application/server/translations/: server_de.ts
source/application/template-canpie-fd/: cp_platform.h
test/: CMakeLists.txt  README.md
test/canpie-fd/: CMakeLists.txt  Makefile  splint.rc  test_cp_core.c  test_cp_fifo.c  test_cp_main_f.c  test_cp_msg_ccf.c  test_cp_msg_ccm.c  test_cp_msg_fdf.c  test_cp_msg_fdm.c
test/cmake/: AddSplint.cmake  splint.rc
test/fff_canpiefd_tests/: CMakeLists.txt  cp_platform.h  test_cp_fifo.c  test_cp_main.c  test_cp_nrl.c  test_cp_nrl_mbx.c
test/fff_cpcore/: README.md  ff_cp_core.c  ff_cp_core.h  ff_cp_core_nrl.c  ff_cp_core_nrl.h
test/fff_mc/: README.md  fff_mc.h
test/qcan/: .gitignore  CMakeLists.txt  test_main.cpp  test_qcan_data.cpp  test_qcan_filter.cpp  test_qcan_filter.hpp  test_qcan_frame.cpp  test_qcan_frame.hpp  test_qcan_socket.cpp  test_qcan_socket.hpp  test_qcan_socket_canpie.cpp  test_qcan_socket_canpie.hpp  test_qcan_timestamp.cpp  test_qcan_timestamp.hpp  tests.pro
test/test-canpie-core/: CMakeLists.txt  device_canfd.c  test_cp_core.c  test_cp_main_f.c  test_cp_main_m.c  test_cp_msg_ccf.c  test_cp_msg_ccm.c  test_cp_msg_fdf.c  test_cp_msg_fdm.c  unity.c  unity.h  unity_fixture.c  unity_fixture.h  unity_fixture_internals.h  unity_internals.h  unity_memory.h
(+536 files in other folders)
